libbinder: do not link with libcutils
Change-Id: I5fefbdb682a76a8672630dbb954d2735e4d5a321
Signed-off-by: Vladimir Oltean <olteanv@gmail.com>

--- a/cmds/dumpsys/Makefile
+++ b/cmds/dumpsys/Makefile
@@ -39,5 +39,13 @@ $(TARGET): $(OBJECTS)
 clean:
 	rm -rf $(OBJECTS) $(TARGET)
 
-.PHONY: clean all
+install-deps: $(LIB_DEPS)
+	$(foreach lib, $^, make -C $(dir $(lib)) install;)
+
+install:
+	install -m 0755 -D $(TARGET) $(DESTDIR)/usr/bin/$(TARGET)
+
+install-all: install-deps install
+
+.PHONY: clean install all
 
