--- a/libs/binder/Makefile
+++ b/libs/binder/Makefile
@@ -52,4 +52,7 @@ $(TARGET): $(OBJECTS)
 clean:
 	rm -rf $(OBJECTS) $(TARGET)
 
-.PHONY: clean all
+install:
+	install -m 0644 $(TARGET) $(DESTDIR)/usr/lib/$(TARGET)
+
+.PHONY: clean install all
