dumpsys: add rules for install and recursive make of dependent libs
Change-Id: I6aaf7ea0b351d5951c8a6f69528cf6957c9f417d
Signed-off-by: Vladimir Oltean <olteanv@gmail.com>

--- a/cmds/dumpsys/Makefile
+++ b/cmds/dumpsys/Makefile
@@ -1,5 +1,14 @@
 ANDROID_TOP_DIR=$(shell realpath ../../../..)
 
+LIB_DEPS = \
+    $(ANDROID_TOP_DIR)/frameworks/native/libs/binder/libbinder.so \
+    $(ANDROID_TOP_DIR)/system/core/liblog/liblog.so \
+    $(ANDROID_TOP_DIR)/system/core/libutils/libutils.so \
+    $(ANDROID_TOP_DIR)/system/core/libcutils/libcutils.so \
+    $(ANDROID_TOP_DIR)/system/core/base/libbase.so
+LIB_DEPS_LDFLAGS = $(addprefix -L,$(dir $(LIB_DEPS))) \
+                   $(addprefix -l,$(patsubst lib%.so, %, $(notdir $(LIB_DEPS))))
+
 CPPFLAGS+= \
     -fPIC \
     -pthread \
@@ -10,16 +19,7 @@ CPPFLAGS+= \
     -I$(ANDROID_TOP_DIR)/libnativehelper/include
 LDFLAGS= \
     -pthread \
-    -L$(ANDROID_TOP_DIR)/frameworks/native/libs/binder \
-    -L$(ANDROID_TOP_DIR)/system/core/liblog \
-    -L$(ANDROID_TOP_DIR)/system/core/libutils \
-    -L$(ANDROID_TOP_DIR)/system/core/libcutils \
-    -L$(ANDROID_TOP_DIR)/system/core/base \
-    -lbinder \
-    -llog \
-    -lutils \
-    -lcutils \
-    -lbase
+    $(LIB_DEPS_LDFLAGS)
 
 SOURCES = \
     dumpsys.cpp
@@ -30,8 +30,11 @@ TARGET=dumpsys
 
 all: $(TARGET)
 
-$(TARGET): $(OBJECTS)
+$(TARGET): $(OBJECTS) $(LIB_DEPS)
 	$(CXX) $(CPPFLAGS) $(OBJECTS) -o $@ $(LDFLAGS)
+
+%.so:
+	make -C $(dir $@)
 
 %.o: %.cpp
 	$(CXX) -c $(CPPFLAGS) -o $@ $<
