dumpsys: add clean-all rule
Change-Id: I28c8709a423e2b2de47631f491892a6373be125c
Signed-off-by: Ioana Ciornei <ciorneiioana@gmail.com>

--- a/cmds/dumpsys/Makefile
+++ b/cmds/dumpsys/Makefile
@@ -42,6 +42,11 @@ $(TARGET): $(OBJECTS) $(LIB_DEPS)
 clean:
 	rm -rf $(OBJECTS) $(TARGET)
 
+clean-deps:
+	$(foreach lib, $(LIB_DEPS), make -C $(dir $(lib)) clean;)
+
+clean-all: clean clean-deps
+
 install-deps: $(LIB_DEPS)
 	$(foreach lib, $^, make -C $(dir $(lib)) install;)
 
