Makefiles: make install target depend on build
Change-Id: I342eaa72750bc45482da793cd1f351237661101f
Signed-off-by: Vladimir Oltean <olteanv@gmail.com>

--- a/cmds/dumpsys/Makefile
+++ b/cmds/dumpsys/Makefile
@@ -49,8 +49,8 @@ clean-all: clean clean-deps
 install-deps: $(LIB_DEPS)
 	$(foreach lib, $^, make -C $(dir $(lib)) install;)
 
-install:
-	install -m 0755 -D $(TARGET) $(DESTDIR)/usr/bin/$(TARGET)
+install: $(TARGET)
+	install -m 0755 -D $^ $(DESTDIR)/usr/bin/$^
 
 install-all: install-deps install
 
